// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Input renders a file input with custom label 1`] = `
.emotion-1 {
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  position: relative;
  display: block;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697a2' class='css-uk6cul'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1:focus-within {
  border-color: #8697a2;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
  className="emotion-1"
>
  <span>
    Upload photo
  </span>
  <input
    className="emotion-0"
    type="file"
  />
</label>
`;

exports[`File Input renders a file input with custom label and placeholder 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-3 {
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  position: relative;
  display: block;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697a2' class='css-uk6cul'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
  padding-top: 1.3125rem;
  padding-bottom: 0.4375rem;
}

.emotion-3:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-3:disabled,
.emotion-3:disabled + label {
  color: #304854;
}

.emotion-3:focus-within {
  border-color: #8697a2;
}

.emotion-1 {
  position: absolute;
  left: 0.875rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  color: #8697a2;
  pointer-events: none;
  -webkit-transform: translateY(-90%) scale(0.75);
  -ms-transform: translateY(-90%) scale(0.75);
  transform: translateY(-90%) scale(0.75);
}

<label
  className="emotion-3"
>
  <span>
    Upload photo
  </span>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      . 
    </span>
    ID, passport, etc.
  </span>
  <input
    className="emotion-0"
    type="file"
  />
</label>
`;

exports[`File Input renders a file input with custom placeholder 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-3 {
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  position: relative;
  display: block;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697a2' class='css-uk6cul'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
  padding-top: 1.3125rem;
  padding-bottom: 0.4375rem;
}

.emotion-3:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-3:disabled,
.emotion-3:disabled + label {
  color: #304854;
}

.emotion-3:focus-within {
  border-color: #8697a2;
}

.emotion-1 {
  position: absolute;
  left: 0.875rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  color: #8697a2;
  pointer-events: none;
  -webkit-transform: translateY(-90%) scale(0.75);
  -ms-transform: translateY(-90%) scale(0.75);
  transform: translateY(-90%) scale(0.75);
}

<label
  className="emotion-3"
>
  <span>
    Choose file
  </span>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      . 
    </span>
    ID, passport, etc.
  </span>
  <input
    className="emotion-0"
    type="file"
  />
</label>
`;

exports[`File Input renders a file input with default label 1`] = `
.emotion-1 {
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  position: relative;
  display: block;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697a2' class='css-uk6cul'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1:focus-within {
  border-color: #8697a2;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
  className="emotion-1"
>
  <span>
    Choose file
  </span>
  <input
    className="emotion-0"
    type="file"
  />
</label>
`;

exports[`File Input renders as error 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-1 {
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  color: #fff;
  background-color: transparent;
  border: 1px solid #415662;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  position: relative;
  display: block;
  cursor: pointer;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 18' xmlns='http://www.w3.org/2000/svg' color='%238697a2' class='css-uk6cul'%3e%3cpath d='M10.902 18H9.098V8.423l-2.78 2.69L5 9.838 10 5l5 4.838-1.318 1.275-2.78-2.69V18zM1.81 1.861V6H0V0h20v6h-1.84V1.861H1.81z' fill='currentColor' fill-rule='nonzero'%3e%3c/path%3e%3c/svg%3e");
  border-color: #ff4e64;
}

.emotion-1:disabled {
  cursor: not-allowed;
  border-color: #304854;
}

.emotion-1:disabled,
.emotion-1:disabled + label {
  color: #304854;
}

.emotion-1,
.emotion-1:not(:placeholder-shown) {
  border-color: #ff4e64;
}

.emotion-1:focus-within {
  border-color: #8697a2;
}

<label
  className="emotion-1"
>
  <span>
    Choose file
  </span>
  <input
    className="emotion-0"
    type="file"
  />
</label>
`;
